services/daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: kube-system
  labels:
    k8s-app: fluentd-logging
spec:
  selector:
    matchLabels:  
      app: fluentd
  template:
    metadata:
      labels: 
        app: fluentd
    spec:
      nodeSelector:
        gpu: "true"
      containers:
      - name: fluentd
        image: fluent/fluentd:latest
